# patch_analysis

./: .gitignore  __init__.py  ds_utils.py  example_hooks gemma.ipynb  example_hooks.ipynb  gemma_hooks.py  hook_guide.md  hook_utils.py  prob_utils.py  pyproject.toml  setup.py  test_utils.ipynb  toy_run.ipynb  utils.py
jobs/: inpainted_sw.py  submit_job.sh
jobs/gemma/: dataset_embedding_mean.py  sw_dataset_embs.py
jobs/qwen/: dataset_embedding_mean.py  inpainted_sw.py  sliding_window.py  sw_dataset_embs.py
sliding_window/: __init__.py  toy_run.ipynb
sliding_window/analyze_results/: check_image_grid.ipynb  inpainted_sw.ipynb  sw_probs.ipynb  swaps.ipynb
